css/game2.css
@import url("https://fonts.googleapis.com/css?family=Noto Sans HK");
html,
body {
    overflow: hidden;
}

body {
    background-color: #000;
    margin: 0;
    padding: 0;
    border: 0;
    /*background-image: url(../src/Game1-design1/render/game1-01.jpg);*/
    background-size: cover;
    width: 100%;
    height: 100%;
    background-color: #000;
    color: #7E4C0A;
    font-family: 'Noto Sans HK'!important;
    font-weight: bold;
    font-style: normal;
    position: relative;
}

a {
    color: #fff;
}

img {
    max-width: 100%;
    max-height: 100%;
}

.page {
    width: 100%;
    height: 100%;
    display: block;
    position: absolute;
    background-color: #000;
}

.object {
    position: absolute;
}

.center {
    margin: 0 auto;
    left: 0;
    right: 0;
}

#start_screen {
    z-index: 2;
    background-image: url(../src/assets/start-bg.jpg);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

#start_title {
    width: 258px;
    top: 29px;
}

#start_desc {
    background-color: #fff;
    opacity: 0.75;
    width: 70%;
    top: 192px;
    padding: 30px;
    font-size: 16px;
    text-align: center;
    line-height: 24px;
}

#start_background {
    width: 480px;
    bottom: 0;
}

#start_btn {
    width: 282px;
    top: 530px;
    height: 100px;
    background-image: url(../src/assets/start.png);
    background-size: cover;
    cursor: pointer;
}

#start_btn:hover {
    background-image: url(../src/assets/start-on.png);
}

.question div,
.answer div {
    display: inline-block;
    padding: 5px 20px;
}

.question div {
    margin-left: 10px;
    margin-bottom: 10px;
    background-color: #31DBE6;
    border-radius: 10px 10px 10px 0;
}

.answer div {
    background-color: #F798A0;
    margin-right: 10px;
    margin-bottom: 10px;
    float: right;
    border-radius: 10px 10px 0px 10px;
}

.flex {
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    //margin-left: 10%;
    //margin-right: 10%;
}

#choices {
    height: 390px;
    border-top: 2px solid #fff;
}

.choice {
    background-color: #fff;
    display: block;
    text-align: center;
    padding: 20px;
    cursor: pointer;
    width: 100%;
    border-width: 0;
    border-bottom: 2px solid #DFE0E1;
    color: #7E4C0A;
    font-size: 24px;
    font-family: 'cwTeXYen'!important;
    font-weight: bold;
    font-style: normal;
    outline: none;
    margin: 0px
}

#result {
    display: none;
}

#choices_container {
    width: 100%;
    overflow: hidden;
    border-radius: 10px;
    box-shadow: 0px 0px 5px 2px rgb(206 122 0 / 70%);
}

#result {
    display: none;
    background-color: rgba(0, 0, 0, 0.5);
}

.clickDisabled {
    pointer-events: none;
}

#questionImageContainer,
#resultImageContainer {
    text-align: center;
    margin-bottom: 2%;
}

#questionImage,
#resultImage {
    width: 60%;
}

#progress {
    width: 100%;
    position: absolute;
    text-align: center;
}

.dot {
    height: 10px;
    width: 10px;
    background-color: #DEC29A;
    border-radius: 50%;
    display: inline-block;
    margin-right: 10px;
}

.active {
    background-color: #DE8C85;
}

#progress_result_text {
    width: 45px;
    border-radius: 50px;
    background-color: #dec29a;
    color: white;
    font-size: 1em;
    padding: 6px 0px;
    font-weight: unset;
}

#resultContent>div {
    background-color: #fff;
    border-radius: 10px;
}

#result_title_text {
    width: 84px;
    top: -25px;
    position: relative;
    left: 5px;
}

#resultText {
    margin: 25px;
    line-height: 25px;
    font-size: 22px;
}

#riskText {
    text-align: center;
    font-size: 32px;
}

#riskLevel {
    font-size: 64px;
}

.low {
    color: #B2D891;
}

.mid {
    color: #DDC357;
}

.high {
    color: #DE8C85;
}

#transition {
    display: none;
    z-index: 99;
    background-repeat: no-repeat;
    color: #fff;
    font-size: 28px;
    background-size: cover;
    background-position: center;
    opacity: 0;
}

#game_conversation {
    background-repeat: no-repeat;
    font-size: 14px;
    background-size: cover;
    width: 100%;
    height: 70%;
    top: 10%;
    background-image: url('../src/assets/msg-bg.jpg');
    padding-top: 20px;
    color: #000;
}

#game_conversation_top div {
    height: 50%;
    width: 100%;
    position: absolute;
    margin: auto;
    top: 0;
    bottom: 0;
}

div#game_conversation_top img {
    height: 100%;
}

#game_conversation_top,
#game_conversation_choices {
    width: 100%;
    height: 10%;
}

#game_conversation_top {
    background-color: #F798A0;
}

#game_conversation_choices {
    overflow-x: auto;
    top: 90%;
    background-color: #6E35A3;
    color: #000;
}

#game_conversation_choices>div {
    margin-left: 20px;
    margin-right: 20px;
    overflow: hidden;
}

#game_conversation_choices>div>div {
    height: 100%;
    display: flex;
    align-items: center;
    overflow-x: auto;
}
body::-webkit-scrollbar {
    width: 12px;
}   
body::-webkit-scrollbar-track {
    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
}
   
body::-webkit-scrollbar-thumb {
    background-color: #fff;
    outline: 1px solid #fff;
}

#game_conversation_input {
    width: 100%;
    height: 10%;
    top: 80%;
    background-color: #fff;
}

#input_field {
    height: 100%;
    width: 80%;
    background-color: #EFEFEF;
    display: inline-block;
    margin-left: 10px;
    border-radius: 10px;
    position: relative;
}

#input_emoji {
    position: absolute;
    height: 70%;
    left: 10px;
    top: 0;
    bottom: 0;
    margin: auto;
}

#input_mic {
    float: right;
    margin-right: 10px;
}

#game_conversation_input>div {
    height: 70%;
    width: 100%;
    position: absolute;
    margin: auto;
    top: 0;
    bottom: 0;
}

.choices {
    font-size: 14px;
    display: inline-table;
    background-color: #fff;
    padding: 0 10px;
    cursor: pointer;
    min-width: 50px;
    text-align: center;
    border-radius: 10px;
    line-height: 36px;
    white-space: nowrap;
}

.choices:hover {
    background-color: #efefef;
}

.fadeInText {
    opacity: 0;
    text-align: center;
}

.fadeInText a {
    text-decoration: underline;
    color: #fff;
}

.fadedIn {
    opacity: 1 !important;
}

#transition_text {
    background-color: rgba(0, 0, 0, 0.5);
    text-align: center;
    padding: 30px;
    width: 70%;
    border-radius: 10px;
}

.popupImage {
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
}

#popupImage_container {
    display: none;
    z-index: 100;
    opacity: 0;
}

.fadeObject {
    transition: opacity 0.5s ease;
}

.fadeOut {
    opacity: 0 !important;
}

#transition_text .choices {
    margin-top: 10px;
    display: block;
    color: #000;
    white-space: normal;
}

.clearBoth {
    clear: both;
}

#conversation_icon {
    margin-left: 10px;
}

#conversation_name {
    margin-left: 10px;
}

#conversation_more {
    float: right;
    margin-right: 10px;
}

.emoji {
    font-size: 18px;
    font-style: normal;
}

.noBackground {
    background-image: none !important;
}

.wrapperWithBackground {
    height: 100%;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

#replay_btn {
    left: 0;
    right: 0;
    margin: 0 auto;
    bottom: 0;
    
}

#replay_btn {
    width: 272px;
    height: 88px;
    background-image: url("../src/assets/btn-restart.png");
}

#popup_next_btn,
.next_btn {
    width: 66px;
    height: 66px;
    background-image: url(../src/assets/btn-right.png);
    top: 0;
    bottom: 0;
    margin: auto;
    right: 0;
}

#replay_btn,
#popup_next_btn,
.next_btn {
    display: none;
    opacity: 0;
    z-index: 101;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    cursor:pointer;
}

